--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "prisma": "^5.1.1",
+    "sass": "^1.69.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
