--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
@@ -39,6 +40,8 @@
     "clsx": "^2.0.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.5.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
@@ -50,5 +53,9 @@
   "ct3aMetadata": {
     "initVersion": "7.22.0"
   },
-  "packageManager": "pnpm@8.9.0"
+  "packageManager": "pnpm@8.9.0",
+  "lint-staged": {
+    "*.{tsx,js}": "eslint --cache --fix",
+    "*.{tsx,css,lcss,md}": "prettier --write"
+  }
 }
