--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "dayjs": "^1.11.10",
+    "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "next": "^13.5.4",
     "react": "18.2.0",
