--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "dayjs": "^1.11.10",
+    "esbuild": "^0.19.5",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "next": "^13.5.4",
+    "mdx-bundler": "^9.2.1",
+    "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-unwrap-images": "^4.0.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
