--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@mdx-js/esbuild": "^3.0.1",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
@@ -21,22 +20,28 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@types/mdast": "^4.0.3",
+    "acorn": "^8.11.3",
+    "acorn-jsx": "^5.3.2",
     "dayjs": "^1.11.10",
     "esbuild": "^0.19.5",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.0.1",
     "next": "^14.1.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.0",
+    "rehype-mdx-code-props": "^2.0.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
     "superjson": "^1.13.1",
+    "unist-util-visit": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@mdx-js/esbuild": "^3.0.1",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
@@ -55,7 +60,8 @@
     "prisma": "^5.1.1",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "unified": "^11.0.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.22.0"
