--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-mdx-code-props": "^2.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
     "superjson": "^1.13.1",
