--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
+    "sharp": "^0.33.2",
     "superjson": "^1.13.1",
     "unist-util-visit": "^5.0.0",
     "zod": "^3.22.4"
