Add new post script.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db:studio": "prisma studio",
     "dev": "next dev --turbo",
     "postinstall": "prisma generate",
+    "new:post": "node ./scripts/new-post.mjs",
     "lint": "next lint",
     "start": "next start",
     "prepare": "husky install"
