--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
-    "@t3-oss/env-nextjs": "^0.7.0",
-    "@tanstack/react-query": "^4.32.6",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
+    "@prisma/client": "^5.12.1",
+    "@simplewebauthn/browser": "^9.0.1",
+    "@simplewebauthn/server": "^9.0.3",
+    "@simplewebauthn/types": "^9.0.1",
     "@types/mdast": "^4.0.3",
     "acorn": "^8.11.3",
     "acorn-jsx": "^5.3.2",
@@ -61,7 +58,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.13",
-    "prisma": "^5.1.1",
+    "prisma": "^5.12.1",
     "sass": "^1.69.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.6",
