--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL=""
+# A unique identifier for your website
+# https://simplewebauthn.dev/docs/packages/server#identifying-your-rp
+rpID=""
