--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.0.2",
-    "next": "^14.1.3",
+    "next": "14.2.0-canary.65",
     "prism-react-renderer": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
