Remove rpID in env, use nextjs header instead

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,5 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL=""
-# A unique identifier for your website
-# https://simplewebauthn.dev/docs/packages/server#identifying-your-rp
-rpID=""
+POSTGRES_PRISMA_URL=""
+POSTGRES_URL_NON_POOLING=""
