--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-blog-t3",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.1.0",
   "scripts": {
     "build": "next build",
     "db:push": "prisma db push",
@@ -9,7 +10,7 @@
     "dev": "next dev --turbo",
     "postinstall": "prisma generate",
     "new:post": "node ./scripts/new-post.mjs",
-    "lint": "next lint",
+    "lint": "eslint . --fix",
     "start": "next start",
     "prepare": "husky install"
   },
@@ -42,31 +43,32 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.18.1",
+    "@eslint-react/eslint-plugin": "^1.5.12",
+    "@eslint/eslintrc": "^3.1.0",
     "@mdx-js/esbuild": "^3.0.1",
     "@types/eslint": "^8.56.9",
+    "@types/eslint__eslintrc": "^2.1.1",
     "@types/node": "^18.19.31",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "eslint-plugin-format": "^0.1.1",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-tailwindcss": "^3.15.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
     "prisma": "^5.12.1",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unified": "^11.0.4"
   },
-  "packageManager": "pnpm@9.1.0",
   "lint-staged": {
-    "*.{tsx,js}": "eslint --cache --fix",
-    "*.{tsx,css,lcss,md}": "prettier --write"
+    "*.{tsx,js}": "eslint --cache --fix"
   }
 }
