--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
+    "prettier": "3.2.5",
     "prisma": "^5.12.1",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
