--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.0.2",
-    "next": "14.2.0-canary.65",
+    "next": "canary",
     "prism-react-renderer": "^2.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^9.0.1",
+    "react": "19.0.0-beta-04b058868c-20240508",
+    "react-dom": "19.0.0-beta-04b058868c-20240508",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-mdx-code-props": "^2.0.0",
     "rehype-slug": "^6.0.0",
@@ -47,8 +46,8 @@
     "@next/eslint-plugin-next": "^14.2.3",
     "@types/eslint": "^8.56.9",
     "@types/node": "^18.19.31",
-    "@types/react": "^18.2.77",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
     "eslint": "^8",
