Revert "chore: update dep"
This reverts commit 69da45c8b51534d829ebaf4250d139cd3689f5c8.

--- a/package.json
+++ b/package.json
@@ -13,50 +13,50 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "@simplewebauthn/browser": "^10.0.0",
-    "@simplewebauthn/server": "^10.0.0",
-    "@simplewebauthn/types": "^10.0.0",
-    "@types/mdast": "^4.0.4",
+    "@prisma/client": "^5.12.1",
+    "@simplewebauthn/browser": "^9.0.1",
+    "@simplewebauthn/server": "^9.0.3",
+    "@simplewebauthn/types": "^9.0.1",
+    "@types/mdast": "^4.0.3",
     "acorn": "^8.11.3",
     "acorn-jsx": "^5.3.2",
-    "dayjs": "^1.11.11",
-    "esbuild": "^0.21.3",
+    "dayjs": "^1.11.10",
+    "esbuild": "^0.19.12",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.0.2",
-    "next": "14.3.0-canary.76",
+    "next": "canary",
     "prism-react-renderer": "^2.3.1",
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-dom": "19.0.0-beta-04b058868c-20240508",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-mdx-code-props": "^3.0.0",
+    "rehype-mdx-code-props": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
-    "sharp": "^0.33.4",
-    "superjson": "^2.2.1",
+    "sharp": "^0.33.3",
+    "superjson": "^1.13.3",
     "unist-util-visit": "^5.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.18.1",
     "@eslint-react/eslint-plugin": "^1.5.12",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
+    "@types/eslint": "^8.56.9",
+    "@types/node": "^18.19.31",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "clsx": "^2.1.1",
-    "eslint": "^8.56.0",
+    "clsx": "^2.1.0",
+    "eslint": "^8",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-tailwindcss": "^3.16.0",
+    "eslint-plugin-tailwindcss": "^3.15.2",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
-    "prisma": "^5.14.0",
-    "sass": "^1.77.2",
+    "prisma": "^5.12.1",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unified": "^11.0.4"
