--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^10.0.2",
-    "next": "14.3.0-canary.76",
+    "next": "canary",
     "prism-react-renderer": "^2.3.1",
-    "react": "19.0.0-beta-04b058868c-20240508",
-    "react-dom": "19.0.0-beta-04b058868c-20240508",
+    "react": "canary",
+    "react-dom": "canary",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-mdx-code-props": "^3.0.0",
     "rehype-slug": "^6.0.0",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-tailwindcss": "^3.16.0",
