--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "@simplewebauthn/server": "^10.0.0",
     "@simplewebauthn/types": "^10.0.0",
     "@types/mdast": "^4.0.4",
-    "acorn": "^8.11.3",
-    "acorn-jsx": "^5.3.2",
     "dayjs": "^1.11.11",
     "esbuild": "^0.21.3",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "mdx-bundler": "^10.0.2",
     "next": "canary",
+    "next-mdx-remote": "^5.0.0",
     "prism-react-renderer": "^2.3.1",
     "react": "canary",
     "react-dom": "canary",
@@ -35,7 +33,6 @@
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
     "sharp": "^0.33.4",
-    "superjson": "^2.2.1",
     "unist-util-visit": "^5.0.0",
     "zod": "^3.23.8"
   },
