chore: add support for react compiler and next.js 15 rc
- Some pages are becoming dynamic, or ppr, i can't find a way to cache it.
- To let vercel find the about content, I need to include a safe path in nextjs config. This will enforce vercel to pass the file in output folder.
- React compiler add '/n' to " ... " string when break line, so I replace it with {` ... `}. I think we need to design a plug to transpiler this, make sure " .. " in the same line.
- next-mdx-remote: use rsc version instead.

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@simplewebauthn/server": "^10.0.0",
     "@simplewebauthn/types": "^10.0.0",
     "@types/mdast": "^4.0.4",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "dayjs": "^1.11.11",
     "esbuild": "^0.21.3",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "next": "canary",
+    "mdx-bundler": "^10.0.2",
+    "next": "rc",
     "next-mdx-remote": "^5.0.0",
     "prism-react-renderer": "^2.3.1",
     "react": "canary",
