--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev --turbo",
     "postinstall": "prisma generate",
     "new:post": "node ./scripts/new-post.mjs",
-    "lint": "eslint . --fix",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
@@ -39,9 +39,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.18.1",
-    "@eslint-react/eslint-plugin": "^1.5.12",
-    "@next/eslint-plugin-next": "^14.2.3",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
@@ -49,11 +46,12 @@
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-format": "^0.1.1",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.16.0",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
     "sass": "^1.77.2",
     "tailwindcss": "^3.4.3",
