--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "esbuild": "^0.21.3",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "mdx-bundler": "^10.0.2",
     "next": "rc",
     "next-mdx-remote": "^5.0.0",
-    "prism-react-renderer": "^2.3.1",
     "react": "canary",
     "react-dom": "canary",
     "rehype-autolink-headings": "^7.1.0",
@@ -41,6 +39,7 @@
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.0",
     "@iconify-json/mingcute": "^1.1.17",
+    "@shikijs/transformers": "^1.6.0",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
@@ -55,6 +54,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
     "sass": "^1.77.2",
+    "shiki": "^1.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "unified": "^11.0.4"
