--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.19.1",
     "@simplewebauthn/browser": "^10.0.0",
-    "@simplewebauthn/server": "^10.0.0",
+    "@simplewebauthn/server": "^10.0.1",
     "@simplewebauthn/types": "^10.0.0",
     "@types/mdast": "^4.0.4",
     "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
-    "dayjs": "^1.11.11",
+    "dayjs": "^1.11.13",
     "esbuild": "^0.21.5",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "next": "rc",
+    "next": "canary",
     "next-mdx-remote": "^5.0.0",
     "nextjs-toploader": "^1.6.12",
     "react": "canary",
@@ -33,31 +33,31 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "unist-util-visit": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify-json/mingcute": "^1.1.18",
-    "@shikijs/transformers": "^1.9.0",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.8",
-    "@types/react": "^18.3.3",
+    "@iconify-json/mingcute": "^1.2.0",
+    "@shikijs/transformers": "^1.16.3",
+    "@types/eslint": "^8.56.12",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.45",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.15.1",
-    "sass": "^1.77.6",
-    "shiki": "^1.9.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
+    "prisma": "^5.19.1",
+    "sass": "^1.78.0",
+    "shiki": "^1.16.3",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2",
     "unified": "^11.0.5"
   }
 }
