[chore]: upgrade deps

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "@simplewebauthn/server": "^10.0.1",
     "@simplewebauthn/types": "^10.0.0",
     "@types/mdast": "^4.0.4",
-    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
+    "babel-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
     "dayjs": "^1.11.13",
     "esbuild": "^0.21.5",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "next": "15.0.2-canary.8",
+    "next": "15.2.0-canary.18",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
-    "react": "19.0.0-rc-1631855f-20241023",
-    "react-dom": "19.0.0-rc-1631855f-20241023",
+    "react": "19.0.0-rc-3dfd5d9e-20240910",
+    "react-dom": "19.0.0-rc-3dfd5d9e-20240910",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-mdx-code-props": "^3.0.1",
     "rehype-slug": "^6.0.0",
@@ -61,10 +61,5 @@
     "typescript": "^5.6.2",
     "unified": "^11.0.5"
   },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
-  }
+  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
