--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@types/mdast": "^4.0.4",
     "babel-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
     "dayjs": "^1.11.13",
-    "esbuild": "^0.21.5",
+    "esbuild": "^0.25.4",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
-    "next": "15.3.0-canary.19",
+    "nanoid": "^5.1.5",
+    "next": "15.4.0-canary.52",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
@@ -40,26 +41,31 @@
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
+    "@eslint/eslintrc": "^3",
     "@iconify-json/mingcute": "^1.2.0",
     "@shikijs/transformers": "^1.16.3",
-    "@types/eslint": "^8.56.12",
     "@types/node": "^20.16.5",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.2-canary.8",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.0-canary.52",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.45",
+    "postcss": "^8.5.3",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.19.1",
-    "sass": "^1.78.0",
+    "sass": "^1.89.0",
     "shiki": "^1.16.3",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2",
     "unified": "^11.0.5"
   },
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
+  "pnpm": {
+    "overrides": {
+      "ajv": "^8.17.1"
+    }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
